Bug 1684180 - Fix ESR build with newer versions of cbindgen. r=kvark, a=RyanVM

This works both with the old and new cbindgen-generated bindings.

This is effectively dead code on ESR though, because we haven't enabled
WebGPU there, but...

Differential Revision: https://phabricator.services.mozilla.com/D100497